Store built artifacts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,3 +14,5 @@ jobs:
           go-version-file: 'path/to/go.mod'
       - name: Test and build
         run: make
+        path: |
+          bin
