--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,9 +14,9 @@ jobs:
           go-version: '^1.13.1' 
       - name: Test and build
         run: make
-      - name: Archive binaries
+      - name: Upload linux-arm
         uses: actions/upload-artifact@v3
         with:
-          name: bin
+          name: bin/select-unplugged-linux-arm
           path: |
-            bin
+            bin/select-unplugged-linux-arm
