Revert "Upload linux arm binary individually"
This reverts commit 71caf0b053fc13d3b2de0b807526e1e1988f486f.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,9 +14,9 @@ jobs:
           go-version: '^1.13.1' 
       - name: Test and build
         run: make
-      - name: Upload linux-arm
+      - name: Archive binaries
         uses: actions/upload-artifact@v3
         with:
-          name: bin/select-unplugged-linux-arm
+          name: bin
           path: |
-            bin/select-unplugged-linux-arm
+            bin
